CK0202/chp4/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  public class MiniJavaParser implements MiniJavaParserConstants {

/************************************
 * The MiniJava Grammar Starts Here *
 ************************************/
  static final public void Goal() throws ParseException {
    MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      TypeDeclaration();
    }
    jj_consume_token(0);
  }

  static final public void MainClass() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
  }

  static final public void TypeDeclaration() throws ParseException {
    if (jj_2_1(3)) {
      ClassDeclaration();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ClassExtendsDeclaration();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void ClassDeclaration() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      VarDeclaration();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      MethodDeclaration();
    }
    jj_consume_token(RBRACE);
  }

  static final public void ClassExtendsDeclaration() throws ParseException {
    jj_consume_token(CLASS);
    Identifier();
    jj_consume_token(EXTENDS);
    Identifier();
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      VarDeclaration();
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      MethodDeclaration();
    }
    jj_consume_token(RBRACE);
  }

  static final public void VarDeclaration() throws ParseException {
    Type();
    Identifier();
    jj_consume_token(SEMICOLON);
  }

  static final public void MethodDeclaration() throws ParseException {
    jj_consume_token(PUBLIC);
    Type();
    Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:
      FormalParameterList();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      VarDeclaration();
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      Statement();
    }
    jj_consume_token(RETURN);
    Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
  }

  static final public void FormalParameterList() throws ParseException {
    FormalParameter();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      FormalParameterRest();
    }
  }

  static final public void FormalParameter() throws ParseException {
    Type();
    Identifier();
  }

  static final public void FormalParameterRest() throws ParseException {
    jj_consume_token(47);
    FormalParameter();
  }

  static final public void Type() throws ParseException {
    if (jj_2_3(3)) {
      ArrayType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        BooleanType();
        break;
      case INTEGER:
        IntegerType();
        break;
      case IDENTIFIER:
        Identifier();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void ArrayType() throws ParseException {
    jj_consume_token(INTEGER);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
  }

  static final public void BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
  }

  static final public void IntegerType() throws ParseException {
    jj_consume_token(INTEGER);
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      Block();
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(2)) {
        AssignmentStatement();
      } else if (jj_2_5(2)) {
        ArrayAssignmentStatement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          IfStatement();
          break;
        case WHILE:
          WhileStatement();
          break;
        case PRINT:
          PrintStatement();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void Block() throws ParseException {
    jj_consume_token(LBRACE);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      Statement();
    }
    jj_consume_token(RBRACE);
  }

  static final public void AssignmentStatement() throws ParseException {
    Identifier();
    jj_consume_token(ASSIGN);
    Expression();
    jj_consume_token(SEMICOLON);
  }

  static final public void ArrayAssignmentStatement() throws ParseException {
    Identifier();
    jj_consume_token(LSQPAREN);
    Expression();
    jj_consume_token(RSQPAREN);
    jj_consume_token(ASSIGN);
    Expression();
    jj_consume_token(SEMICOLON);
  }

  static final public void IfStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
    jj_consume_token(ELSE);
    Statement();
  }

  static final public void WhileStatement() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    Statement();
  }

  static final public void PrintStatement() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

  static final public void Expression() throws ParseException {
    if (jj_2_6(2147483647)) {
      AndExpression();
    } else if (jj_2_7(2147483647)) {
      CompareExpression();
    } else if (jj_2_8(2147483647)) {
      PlusExpression();
    } else if (jj_2_9(2147483647)) {
      MinusExpression();
    } else if (jj_2_10(2147483647)) {
      TimesExpression();
    } else if (jj_2_11(2147483647)) {
      ArrayLookup();
    } else if (jj_2_12(2147483647)) {
      ArrayLength();
    } else if (jj_2_13(2147483647)) {
      MessageSend();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case FALSE:
      case NEW:
      case THIS:
      case TRUE:
      case INTEGER_LITERAL:
      case IDENTIFIER:
        PrimaryExpression();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void AndExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(AND);
    PrimaryExpression();
  }

  static final public void CompareExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(LT);
    PrimaryExpression();
  }

  static final public void PlusExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(PLUS);
    PrimaryExpression();
  }

  static final public void MinusExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(MINUS);
    PrimaryExpression();
  }

  static final public void TimesExpression() throws ParseException {
    PrimaryExpression();
    jj_consume_token(48);
    PrimaryExpression();
  }

  static final public void ArrayLookup() throws ParseException {
    PrimaryExpression();
    jj_consume_token(LSQPAREN);
    PrimaryExpression();
    jj_consume_token(RSQPAREN);
  }

  static final public void ArrayLength() throws ParseException {
    PrimaryExpression();
    jj_consume_token(DOT);
    jj_consume_token(LENGTH);
  }

  static final public void MessageSend() throws ParseException {
    PrimaryExpression();
    jj_consume_token(DOT);
    Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case FALSE:
    case NEW:
    case THIS:
    case TRUE:
    case INTEGER_LITERAL:
    case IDENTIFIER:
      ExpressionList();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
  }

  static final public void ExpressionList() throws ParseException {
    Expression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_10;
      }
      ExpressionRest();
    }
  }

  static final public void ExpressionRest() throws ParseException {
    jj_consume_token(47);
    Expression();
  }

  static final public void PrimaryExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      IntegerLiteral();
      break;
    case TRUE:
      TrueLiteral();
      break;
    case FALSE:
      FalseLiteral();
      break;
    case IDENTIFIER:
      Identifier();
      break;
    case THIS:
      ThisExpression();
      break;
    default:
      jj_la1[16] = jj_gen;
      if (jj_2_14(3)) {
        ArrayAllocationExpression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          AllocationExpression();
          break;
        default:
          jj_la1[17] = jj_gen;
          if (jj_2_15(2)) {
            NotExpression();
          } else if (jj_2_16(3)) {
            BracketExpression();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

  static final public void IntegerLiteral() throws ParseException {
    jj_consume_token(INTEGER_LITERAL);
  }

  static final public void TrueLiteral() throws ParseException {
    jj_consume_token(TRUE);
  }

  static final public void FalseLiteral() throws ParseException {
    jj_consume_token(FALSE);
  }

  static final public void Identifier() throws ParseException {
    jj_consume_token(IDENTIFIER);
  }

  static final public void ThisExpression() throws ParseException {
    jj_consume_token(THIS);
  }

  static final public void ArrayAllocationExpression() throws ParseException {
    jj_consume_token(NEW);
    jj_consume_token(INTEGER);
    jj_consume_token(LSQPAREN);
    Expression();
    jj_consume_token(RSQPAREN);
  }

  static final public void AllocationExpression() throws ParseException {
    jj_consume_token(NEW);
    Identifier();
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
  }

  static final public void NotExpression() throws ParseException {
    jj_consume_token(LPAREN);
    jj_consume_token(NOT);
    Expression();
    jj_consume_token(RPAREN);
  }

  static final public void BracketExpression() throws ParseException {
    jj_consume_token(LPAREN);
    Expression();
    jj_consume_token(RPAREN);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_3R_22() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_24()) {
    jj_scanpos = xsp;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) {
    jj_scanpos = xsp;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_3R_33()) return true;
    return false;
  }

  static private boolean jj_3R_43() {
    if (jj_3R_44()) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(43)) {
    jj_scanpos = xsp;
    if (jj_scan_token(40)) {
    jj_scanpos = xsp;
    if (jj_scan_token(28)) {
    jj_scanpos = xsp;
    if (jj_scan_token(44)) {
    jj_scanpos = xsp;
    if (jj_scan_token(39)) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3_15()) {
    jj_scanpos = xsp;
    if (jj_3_16()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_44() {
    if (jj_scan_token(47)) return true;
    if (jj_3R_22()) return true;
    return false;
  }

  static private boolean jj_3R_42() {
    if (jj_3R_22()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_43()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_41() {
    if (jj_3R_42()) return true;
    return false;
  }

  static private boolean jj_3R_40() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(44)) return true;
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_41()) jj_scanpos = xsp;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_3R_20()) return true;
    if (jj_scan_token(44)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(44)) return true;
    if (jj_scan_token(LSQPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_22()) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_39() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(LENGTH)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(44)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_22()) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_38() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(LSQPAREN)) return true;
    if (jj_3R_16()) return true;
    if (jj_scan_token(RSQPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(44)) return true;
    if (jj_scan_token(LPAREN)) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(CLASS)) return true;
    if (jj_scan_token(44)) return true;
    if (jj_scan_token(LBRACE)) return true;
    return false;
  }

  static private boolean jj_3R_37() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(48)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(INTEGER)) return true;
    if (jj_scan_token(LSQPAREN)) return true;
    if (jj_3R_22()) return true;
    if (jj_scan_token(RSQPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_36() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_11()) return true;
    return false;
  }
